src/test/ui/nll/issue-27868.stderr
error[E0506]: cannot assign to `vecvec` because it is borrowed
  --> $DIR/issue-27868.rs:26:9
   |
LL |       vecvec[0] += {
   |       ------
   |       |
   |  _____borrow of `vecvec` occurs here
   | |
LL | |         vecvec = vec![];
   | |         ^^^^^^ assignment to borrowed `vecvec` occurs here
LL | |
LL | |         0
LL | |     };
   | |_____- borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0506`.
